Added ID to send button and file send button in ChatFrame.fxml
Added the content from JdbcLoginDao to UserDAO

Added TextField for User name and reorganized the other TextFields in
Registration.fxml

--- a/client/src/main/java/bg/tu/varna/si/chat/client/Registration.fxml
+++ b/client/src/main/java/bg/tu/varna/si/chat/client/Registration.fxml
@@ -36,14 +36,16 @@
                   <Region HBox.hgrow="ALWAYS" />
                   <VBox>
                      <children>
-                        <Label text="First name:" />
-                        <TextField fx:id="firstNameField"/>
-                        <Label text="Last name:" />
-                        <TextField fx:id="lastNameField"/>
                         <Label text="Username:" />
-                        <TextField fx:id="userNameField"/>
+                        <TextField fx:id="userNameField" />
+                        <Label text="First name:" />
+                        <TextField fx:id="firstNameField" />
+                        <Label text="Last name:" />
+                        <TextField fx:id="lastNameField" />
+                        <Label text="Display name:" />
+                        <TextField fx:id="displayNameField" />
                         <Label text="Password:" />
-                        <PasswordField fx:id="passwordField"/>
+                        <PasswordField fx:id="passwordField" />
                      </children>
                   </VBox>
                   <Region HBox.hgrow="ALWAYS" />
