--- a/client/src/main/java/bg/tu/varna/si/chat/client/ChatFrame.fxml
+++ b/client/src/main/java/bg/tu/varna/si/chat/client/ChatFrame.fxml
@@ -55,7 +55,7 @@
             <HBox spacing="8.0">
                <children>
                   <TextField prefHeight="32.0" prefWidth="369.0" HBox.hgrow="ALWAYS" />
-                  <Button mnemonicParsing="false">
+                  <Button fx:id="sendFileButton" mnemonicParsing="false">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -64,7 +64,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button layoutX="159.0" layoutY="10.0" mnemonicParsing="false">
+                  <Button fx:id="sendMessageButton" layoutX="159.0" layoutY="10.0" mnemonicParsing="false">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
