--- a/client/src/main/resources/Registration.fxml
+++ b/client/src/main/resources/Registration.fxml
@@ -14,7 +14,7 @@
             <Region HBox.hgrow="ALWAYS" />
             <ImageView fitHeight="97.0" fitWidth="168.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Image/register.png" />
+                  <Image url="@register.png" />
                </image>
             </ImageView>
             <Region HBox.hgrow="ALWAYS" />
