--- a/client/src/main/resources/ChatFrame.fxml
+++ b/client/src/main/resources/ChatFrame.fxml
@@ -55,7 +55,7 @@
             <HBox spacing="8.0">
                <children>
                   <TextField fx:id="userInputMessage" prefHeight="32.0" prefWidth="369.0" HBox.hgrow="ALWAYS" />
-                  <Button fx:id="sendFileButton" mnemonicParsing="false">
+                  <Button fx:id="sendFileButton" mnemonicParsing="false" onAction="#sendFileButtonClicked" text="File">
                      <graphic>
                         <ImageView fx:id="sendFile" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -64,7 +64,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="sendMessageButton" layoutX="159.0" layoutY="10.0" mnemonicParsing="false">
+                  <Button fx:id="sendMessageButton" layoutX="159.0" layoutY="10.0" mnemonicParsing="false" onAction="#sendMessageButtonClicked" text="Send">
                      <graphic>
                         <ImageView fx:id="sendMessage" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
