--- a/client/src/main/resources/Chat.fxml
+++ b/client/src/main/resources/Chat.fxml
@@ -7,11 +7,48 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="582.0" prefWidth="664.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu.varna.si.chat.client.controller.ChatController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@dnkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu.varna.si.chat.client.controller.ChatController">
+   <center>
+      <VBox BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <HBox prefHeight="14.0" prefWidth="432.0">
+                     <children>
+                        <Region HBox.hgrow="ALWAYS" />
+                        <Label fx:id="chatUserName" />
+                        <Region layoutX="10.0" layoutY="10.0" HBox.hgrow="ALWAYS" />
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <Pane fx:id="messagePane" disable="false" prefHeight="720.0" prefWidth="1280.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <ListView fx:id="messages" fixedCellSize="1.0" prefHeight="632.0" prefWidth="1064.0" />
+                     </children></Pane>
+                  <HBox prefHeight="25.0" prefWidth="448.0" spacing="8.0">
+                     <children>
+                        <Button fx:id="sendFileButton" layoutX="387.0" layoutY="10.0" mnemonicParsing="false" onAction="#sendFileButtonClicked" prefWidth="70.0" text="File" />
+                        <TextField fx:id="userInputMessage" onKeyPressed="#onEnterPressed" prefHeight="25.0" prefWidth="179.0" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="sendMessageButton" layoutX="159.0" layoutY="10.0" mnemonicParsing="false" onAction="#sendMessageButtonPressed" prefWidth="75.0" text="Send" />
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="8.0" top="8.0" />
+                     </VBox.margin>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+         </BorderPane.margin>
+      </VBox>
+   </center>
    <left>
-      <SplitPane BorderPane.alignment="CENTER">
-         <items>
-            <VBox>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="511.0" prefWidth="194.0">
                <children>
                   <HBox>
                      <children>
@@ -29,42 +66,8 @@
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </VBox>
-         </items>
-         <BorderPane.margin>
-            <Insets />
-         </BorderPane.margin>
-      </SplitPane>
-   </left>
-   <center>
-      <VBox BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Region HBox.hgrow="ALWAYS" />
-                  <Label fx:id="chatUserName" />
-                  <Region layoutX="10.0" layoutY="10.0" HBox.hgrow="ALWAYS" />
-               </children>
-               <VBox.margin>
-                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="18.0" left="18.0" right="18.0" top="18.0" />
-               </padding>
-            </HBox>
-            <Pane fx:id="messagePane" disable="false" prefHeight="491.0" prefWidth="384.0" VBox.vgrow="ALWAYS" />
-            <HBox spacing="8.0">
-               <children>
-                  <TextField fx:id="userInputMessage" prefHeight="32.0" prefWidth="369.0" HBox.hgrow="ALWAYS" />
-                  <Button fx:id="sendMessageButton" layoutX="159.0" layoutY="10.0" mnemonicParsing="false" onAction="#sendMessage" prefWidth="70.0" text="Send" />
-               </children>
-               <VBox.margin>
-                  <Insets bottom="8.0" top="8.0" />
-               </VBox.margin>
-            </HBox>
+            <Separator orientation="VERTICAL" prefHeight="200.0" />
          </children>
-         <BorderPane.margin>
-            <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-         </BorderPane.margin>
-      </VBox>
-   </center>
+      </HBox>
+   </left>
 </BorderPane>
