--- a/client/src/main/resources/Chat.fxml
+++ b/client/src/main/resources/Chat.fxml
@@ -29,9 +29,10 @@
                      </children></Pane>
                   <HBox prefHeight="25.0" prefWidth="448.0" spacing="8.0">
                      <children>
-                        <Button fx:id="sendFileButton" layoutX="387.0" layoutY="10.0" mnemonicParsing="false" onAction="#sendFileButtonClicked" prefWidth="70.0" text="File" />
+                      <Button fx:id="addUser" layoutX="387.0" layoutY="10.0" mnemonicParsing="false" onAction="#groupChat" prefWidth="70.0" text="" />
+                        <Button fx:id="sendFileButton" layoutX="387.0" layoutY="10.0" mnemonicParsing="false" onAction="#sendFileButtonClicked" prefWidth="70.0" text="" />
                         <TextField fx:id="userInputMessage" onKeyPressed="#onEnterPressed" prefHeight="25.0" prefWidth="179.0" HBox.hgrow="ALWAYS" />
-                        <Button fx:id="sendMessageButton" layoutX="159.0" layoutY="10.0" mnemonicParsing="false" onAction="#sendMessageButtonPressed" prefWidth="75.0" text="Send" />
+                        <Button fx:id="sendMessageButton" layoutX="159.0" layoutY="10.0" mnemonicParsing="false" onAction="#sendMessageButtonPressed" prefWidth="75.0" text="" />
                      </children>
                      <VBox.margin>
                         <Insets bottom="8.0" top="8.0" />
